--- a/display.html
+++ b/display.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <!-- ...other head elements... -->
-    <title>Recycling Rewards - Display</title>
+    <title>Līdzekļi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Recycling Rewards Summary</h1>
+        <h1>Kopā nodoti:</h1>
         <div id="totalAmount"></div>
+
+        <h1>Līdz nākamajam mērķim:</h1>
         <div class="progress-container">
             <div class="progress-bar" id="progressBar"></div>
         </div>
