--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recycling Rewards</title>
+    <title>Taras nodošana</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1>Enter Bottle Count</h1>
+        <h1>Nodoto pudeļu skaits</h1>
         <form id="bottleForm">
             <input type="number" id="bottles" name="bottles" min="1" required>
-            <button type="submit">Generate QR Code</button>
+            <button type="submit">Ģenerēt QR kodu</button>
         </form>
 
         <div id="qrCode"></div>
