--- a/display.html
+++ b/display.html
@@ -12,7 +12,9 @@
 
         <h1>Līdz nākamajam mērķim:</h1>
         <div class="progress-container">
+            <div id="currentBottles">0</div> <!-- Current number of bottles -->
             <div class="progress-bar" id="progressBar"></div>
+            <div id="goalBottles">50</div> <!-- Goal number of bottles -->
         </div>
     </div>
 
