--- a/display.html
+++ b/display.html
@@ -9,12 +9,14 @@
     <div class="container">
         <h1>Kopā nodoti:</h1>
         <div id="totalAmount"></div>
+        <a id="transferButton" href="parskaiti.html" target="_blank">This is a link</a>
 
         <h1>Līdz nākamajam mērķim:</h1>
-        <div class="progress-container">
-            <div id="currentBottles">0</div> <!-- Current number of bottles -->
+        <div id="progressContainer" class="progress-container">
+            <div id="startBottles">0</div>
+            <div id="currentBottles">25</div> 
             <div class="progress-bar" id="progressBar"></div>
-            <div id="goalBottles">50</div> <!-- Goal number of bottles -->
+            <div id="goalBottles">50</div> 
         </div>
     </div>
 
