--- a/display.html
+++ b/display.html
@@ -12,7 +12,7 @@
         <a id="transferButton" href="parskaiti.html" target="_blank">This is a link</a>
 
         <h1>Līdz nākamajam mērķim:</h1>
-        <div id="progressContainer" class="progress-container">
+        <div id="progressContainer" data-start="0" data-end="50" class="progress-container">
             <div id="startBottles">0</div>
             <div id="currentBottles">25</div> 
             <div class="progress-bar" id="progressBar"></div>
