try2 dizaina klumes fix

--- a/display.html
+++ b/display.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h1>Kopā nodoti:</h1>
         <div id="totalAmount"></div>
-        <a id="transferButton" href="parskaiti.html" target="_blank">This is a link</a>
+        <a id="transferButton" href="parskaiti.html" target="_blank">Pārskaitīt</a>
 
         <h1>Līdz nākamajam mērķim:</h1>
         <div id="progressContainer" data-start="0" data-end="50" class="progress-container">
