--- a/display.html
+++ b/display.html
@@ -13,7 +13,9 @@
 
         <h1>Līdz nākamajam mērķim:</h1>
         <div id="progressContainer" data-start="0" data-end="50" class="progress-container">
+            <div id="currentBottles">0</div> <!-- Current number of bottles -->
             <div class="progress-bar" id="progressBar"></div>
+            <div id="goalBottles">50</div> 
         </div>
     </div>
 
