nez jau kurs try

--- a/display.html
+++ b/display.html
@@ -13,9 +13,11 @@
 
         <h1>Līdz nākamajam mērķim:</h1>
         <div id="progressContainer" data-start="0" data-end="50" class="progress-container">
-            <div id="currentBottles">0</div> <!-- Current number of bottles -->
-            <div class="progress-bar" id="progressBar"></div>
-            <div id="goalBottles">50</div> 
+            <div class="progress-bar" id="progressBar">
+                <div id="currentBottles" class="current-value">0</div> <!-- Current bottles indicator -->
+                <div class="triangle"></div> <!-- Triangle indicator -->
+            </div>
+            
         </div>
     </div>
 
