--- a/parskaiti.html
+++ b/parskaiti.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pārskaitīt Līdzekļus</h1>
+        <h1>Pārskaitīt līdzekļus</h1>
         <p>Izvēlies banku, uz kuru vēlies pārskaitīt līdzekļus:</p>
         <div class="bank-list">
             <button class="bank-button" onclick="transfer('Swedbank')">
