--- a/display.html
+++ b/display.html
@@ -20,6 +20,9 @@
             </div>
             
         </div>
+        <div class="milzu">
+            <img src="milzu.jpg" alt="milzuatlaide">
+        </div>
     </div>
 
     <script src="display.js"></script>
