--- a/display.html
+++ b/display.html
@@ -21,7 +21,7 @@
             
         </div>
         <div class="milzu">
-            <img src="milzu.jpg" alt="milzuatlaide">
+            <img src="milzu.jpg" alt="Milzu Atlaide" id="milzu">
         </div>
     </div>
 
