--- a/display.html
+++ b/display.html
@@ -17,6 +17,7 @@
         <div class="milzu">
             <img src="milzu.jpg" alt="Milzu Atlaide" id="milzu">
         </div>
+        <p>*-15% atlaide piemērojama vienai jebkurai pakai Milzu pārslām</p>
         <div id="progressContainer" data-start="0" data-end="50" class="progress-container">
             <div class="progress-bar" id="progressBar">
                 <div id="currentBottles" class="current-value">0</div> <!-- Current bottles indicator -->
